--- a/EstiloIni.css
+++ b/EstiloIni.css
@@ -1,7 +1,23 @@
-.Inicio{
-    height: 3%;
-    width: 3%;
+.IniA{
+    text-align: center;
+    margin: 0 auto;
+}
+.IniImg{
+    height: 40px;
+    width: 40px;
+    transform: rotate(90deg);
 }
 h1.Ini{
     text-align: center;
+}
+.test{
+    border-bottom: 1px solid rgb(180, 180, 180);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.Cambio{
+    float: right;
+    margin-top: 0;
+    margin-right: 10px;
 }
