--- a/Eje7/Estilo.css
+++ b/Eje7/Estilo.css
@@ -5,6 +5,7 @@
     font-size: 60px;
 }
 .parrafounic{
+    background-color: black;
     color: orangered;
     text-align: justify;
     line-height: 3;
