--- a/Eje8/Estilo.css
+++ b/Eje8/Estilo.css
@@ -1,4 +1,4 @@
 @import url(../EstiloIni.css);
 ul{
-    list-style-image: url('sqpurple.gif');
+    list-style-image: url('https://www.w3schools.com/cssref/sqpurple.gif');
 }
